--- a/cursos/espanol/datascience/6.1_ejercicio_diabetes_parte1.ipynb
+++ b/cursos/espanol/datascience/6.1_ejercicio_diabetes_parte1.ipynb
@@ -79,8 +79,8 @@
    "source": [
     "#@title Solucion {display-mode:\"form\"}\n",
     "\n",
-    "df_ana_train = pd.read_csv('data/diabetes/diabetes_train_analisis.csv')\n",
-    "df_inf_train = pd.read_csv('data/diabetes/diabetes_train_info.csv')"
+    "df_ana_train = pd.read_csv('https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/data/diabetes/diabetes_train_analisis.csv')\n",
+    "df_inf_train = pd.read_csv('https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/data/diabetes/diabetes_train_info.csv')"
    ]
   },
   {
@@ -542,8 +542,8 @@
    "source": [
     "#@title Solucion {display-mode:\"form\"}\n",
     "\n",
-    "df_ana_test = pd.read_csv('data/diabetes/diabetes_test_analisis.csv')\n",
-    "df_inf_test = pd.read_csv('data/diabetes/diabetes_test_info.csv')\n",
+    "df_ana_test = pd.read_csv('https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/data/diabetes/diabetes_test_analisis.csv')\n",
+    "df_inf_test = pd.read_csv('https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/data/diabetes/diabetes_test_info.csv')\n",
     "df_test = pd.merge(df_ana_test,df_inf_test,on=\"id\")\n",
     "df_test = df_test.drop(\"id\",axis=1)\n",
     "df_test.presion = df_test.presion.str.replace(\"\\\\\",\"/\",regex=False)\n",
