--- a/cursos/espanol/datascience/E2_arbol.ipynb
+++ b/cursos/espanol/datascience/E2_arbol.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/surf_or_not.csv')\n",
+    "df = pd.read_csv('https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/data/surf_or_not.csv')\n",
     "df"
    ]
   },
