--- a/cursos/espanol/deeplearning/LangChain_Chains.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_Chains.ipynb
@@ -9,16 +9,541 @@
     "\n",
     "Aqui nos enfocaremos en las cadenas o Chains que son muy importantes en la libreria LangChain y por ello estan en su nombre.\n",
     "\n",
-    "Las Chains nos permiten encadenar la salida de una consulta a un LLM con la entrada a otra consulta y asi conseguir mejores resultados y mas complejos."
+    "Las Chains nos permiten encadenar la salida de una consulta a un LLM con la entrada a otra consulta y asi conseguir mejores resultados y mas complejos.\n",
+    "\n",
+    "Una cadena se compone de un modelo,un prompt de entrada y su respectiva salida. Veamos algunos ejemplos:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a50d2a5-7607-4959-892f-163d4d7d8cea",
+   "id": "b06e207f-26bb-413f-8dbf-821936f06456",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!pip install openai --upgrade --quiet\n",
+    "!pip install langchain --upgrade --quiet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5bc6cd7-9903-424a-8359-605dc5f5b318",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import openai\n",
+    "\n",
+    "# Cargar token desde google drive\n",
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')\n",
+    "with open('drive/MyDrive/Tokens/openai.txt','r') as f:\n",
+    "    token = f.read()\n",
+    "    openai.api_key = token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87c22929-e0f5-4bce-9c44-6d834702d583",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain.chains import LLMChain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ba0834e-cf41-4881-a5a2-09569cfcc714",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = ChatOpenAI(openai_api_key=token, temperature=0.0, model=\"gpt-3.5-turbo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13d89f55-913a-4a1c-8f0e-8f204ee4e59c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = ChatPromptTemplate.from_template(\n",
+    "    \"What is the best name to describe \\\n",
+    "    a company that makes {product}?\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c205014-6c1e-48b9-abc2-bc2de318383a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain = LLMChain(llm=llm, prompt=prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2fb4a34-df45-4b08-b5cc-0a0340569503",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "product = \"Queen Size Sheet Set\"\n",
+    "chain.run(product)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6da28c4e-5e52-4dd9-a0f0-8e799da56660",
+   "metadata": {},
+   "source": [
+    "## Simple Sequential Chain\n",
+    "\n",
+    "En este ejemplo como su nombre lo indica cada cadena es simple y esto significa que solo tiene una entrada y una salida y es secuencial porque la la salida de una cadena sera la entrada de otra."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "823f9201-3249-4c54-8b82-77351c478720",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chains import SimpleSequentialChain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b32f3079-6dc1-4020-b5f6-aa3540a7c49f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = ChatOpenAI(openai_api_key=token, temperature=0.0, model=\"gpt-3.5-turbo\")\n",
+    "\n",
+    "# prompt template 1\n",
+    "first_prompt = ChatPromptTemplate.from_template(\n",
+    "    \"What is the best name to describe \\\n",
+    "    a company that makes {product}?\"\n",
+    ")\n",
+    "\n",
+    "# chain 1\n",
+    "chain_1 = LLMChain(llm=llm, prompt=first_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f980a2f-8c43-40bf-9dfa-739e1c318eb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# prompt template 2\n",
+    "second_prompt = ChatPromptTemplate.from_template(\n",
+    "    \"Write a 20 words description for the following \\\n",
+    "    company:{company_name}\"\n",
+    ")\n",
+    "# chain 2\n",
+    "chain_2 = LLMChain(llm=llm, prompt=second_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34c64446-15a4-45c1-a95d-620bca9b4ed7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cadena_simple_secuencial = SimpleSequentialChain(\n",
+    "    chains=[chain_1, chain_2],\n",
+    "    verbose=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ab4b16b-1ff8-46b8-a6b8-da1aa6b97aec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cadena_simple_secuencial.run(product)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7eeee50-9e01-4da8-b034-3cb62418dce8",
+   "metadata": {},
+   "source": [
+    "## Sequential Chain\n",
+    "\n",
+    "En este caso podemos hacer que una cadena tenga como entrada la salida de mas de una cadena. Por ello ahora utilizaremos el atributo **output_key** para darle un nombre a cada salida y luego poder utilizarla mas tarde como entrada en otra cadena."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05f49692-764f-4b6a-967b-fb5cb89f21af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chains import SequentialChain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ce219b6-a0d6-48da-8240-e2a23b69e633",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = ChatOpenAI(openai_api_key=token, temperature=0.0, model=\"gpt-3.5-turbo\")\n",
+    "\n",
+    "# prompt template 1: translate to english\n",
+    "first_prompt = ChatPromptTemplate.from_template(\n",
+    "    \"Translate the following review to english:\"\n",
+    "    \"\\n\\n{Review}\"\n",
+    ")\n",
+    "# chain 1: input= Review and output= English_Review\n",
+    "chain_one = LLMChain(llm=llm, prompt=first_prompt, \n",
+    "                     output_key=\"English_Review\"\n",
+    "                    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1d4b065-ca4f-4155-9b52-d3eba505f30e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "second_prompt = ChatPromptTemplate.from_template(\n",
+    "    \"Can you summarize the following review in 1 sentence:\"\n",
+    "    \"\\n\\n{English_Review}\"\n",
+    ")\n",
+    "# chain 2: input= English_Review and output= summary\n",
+    "chain_two = LLMChain(llm=llm, prompt=second_prompt, \n",
+    "                     output_key=\"summary\"\n",
+    "                    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a2c5579-9b9a-441d-aee1-1e364d195f25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# prompt template 3: translate to english\n",
+    "third_prompt = ChatPromptTemplate.from_template(\n",
+    "    \"What language is the following review:\\n\\n{Review}\"\n",
+    ")\n",
+    "# chain 3: input= Review and output= language\n",
+    "chain_three = LLMChain(llm=llm, prompt=third_prompt,\n",
+    "                       output_key=\"language\"\n",
+    "                      )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d5159ff-7fdc-4f5f-ac42-90eea8a7448b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# prompt template 4: follow up message\n",
+    "fourth_prompt = ChatPromptTemplate.from_template(\n",
+    "    \"Write a follow up response to the following \"\n",
+    "    \"summary in the specified language:\"\n",
+    "    \"\\n\\nSummary: {summary}\\n\\nLanguage: {language}\"\n",
+    ")\n",
+    "# chain 4: input= summary, language and output= followup_message\n",
+    "chain_four = LLMChain(llm=llm, prompt=fourth_prompt,\n",
+    "                      output_key=\"followup_message\"\n",
+    "                     )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff8ea91d-d057-4bee-9122-f36737cb3a34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# overall_chain: input= Review \n",
+    "# and output= English_Review,summary, followup_message\n",
+    "overall_chain = SequentialChain(\n",
+    "    chains=[chain_one, chain_two, chain_three, chain_four],\n",
+    "    input_variables=[\"Review\"],\n",
+    "    output_variables=[\"English_Review\", \"summary\",\"followup_message\"],\n",
+    "    verbose=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87cf3743-fdf6-4220-acb2-2fb4b53167b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "review = \"Esta comida estuvo deliciosa\"\n",
+    "overall_chain(review)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d0b5aec-953e-46d8-bee2-6548ad169f49",
+   "metadata": {},
+   "source": [
+    "## Router Chain\n",
+    "\n",
+    "En este caso podemos elegir que cadena queremos utilizar de acuerdo al tipo de salida de la cadena anterior."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0eec3f40-0fee-4a75-ae2a-1edc62cd4d82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "physics_template = \"\"\"You are a very smart physics professor. \\\n",
+    "You are great at answering questions about physics in a concise\\\n",
+    "and easy to understand manner. \\\n",
+    "When you don't know the answer to a question you admit\\\n",
+    "that you don't know.\n",
+    "\n",
+    "Here is a question:\n",
+    "{input}\"\"\"\n",
+    "\n",
+    "\n",
+    "math_template = \"\"\"You are a very good mathematician. \\\n",
+    "You are great at answering math questions. \\\n",
+    "You are so good because you are able to break down \\\n",
+    "hard problems into their component parts, \n",
+    "answer the component parts, and then put them together\\\n",
+    "to answer the broader question.\n",
+    "\n",
+    "Here is a question:\n",
+    "{input}\"\"\"\n",
+    "\n",
+    "history_template = \"\"\"You are a very good historian. \\\n",
+    "You have an excellent knowledge of and understanding of people,\\\n",
+    "events and contexts from a range of historical periods. \\\n",
+    "You have the ability to think, reflect, debate, discuss and \\\n",
+    "evaluate the past. You have a respect for historical evidence\\\n",
+    "and the ability to make use of it to support your explanations \\\n",
+    "and judgements.\n",
+    "\n",
+    "Here is a question:\n",
+    "{input}\"\"\"\n",
+    "\n",
+    "\n",
+    "computerscience_template = \"\"\" You are a successful computer scientist.\\\n",
+    "You have a passion for creativity, collaboration,\\\n",
+    "forward-thinking, confidence, strong problem-solving capabilities,\\\n",
+    "understanding of theories and algorithms, and excellent communication \\\n",
+    "skills. You are great at answering coding questions. \\\n",
+    "You are so good because you know how to solve a problem by \\\n",
+    "describing the solution in imperative steps \\\n",
+    "that a machine can easily interpret and you know how to \\\n",
+    "choose a solution that has a good balance between \\\n",
+    "time complexity and space complexity. \n",
+    "\n",
+    "Here is a question:\n",
+    "{input}\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74778809-a5da-4076-b452-f8f6c68c22b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt_infos = [\n",
+    "    {\n",
+    "        \"name\": \"physics\", \n",
+    "        \"description\": \"Good for answering questions about physics\", \n",
+    "        \"prompt_template\": physics_template\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"math\", \n",
+    "        \"description\": \"Good for answering math questions\", \n",
+    "        \"prompt_template\": math_template\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"History\", \n",
+    "        \"description\": \"Good for answering history questions\", \n",
+    "        \"prompt_template\": history_template\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"computer science\", \n",
+    "        \"description\": \"Good for answering computer science questions\", \n",
+    "        \"prompt_template\": computerscience_template\n",
+    "    }\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa479794-1dc3-41c0-b2a2-c9917798399d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chains.router import MultiPromptChain\n",
+    "from langchain.chains.router.llm_router import LLMRouterChain,RouterOutputParser\n",
+    "from langchain.prompts import PromptTemplate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a5ff200-dea5-4e00-b58c-37ea9a9bd2a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = ChatOpenAI(openai_api_key=token, temperature=0.0, model=\"gpt-3.5-turbo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad77754a-036e-4e49-9f6e-6dfa70076b61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "destination_chains = {}\n",
+    "for p_info in prompt_infos:\n",
+    "    name = p_info[\"name\"]\n",
+    "    prompt_template = p_info[\"prompt_template\"]\n",
+    "    prompt = ChatPromptTemplate.from_template(template=prompt_template)\n",
+    "    chain = LLMChain(llm=llm, prompt=prompt)\n",
+    "    destination_chains[name] = chain  \n",
+    "    \n",
+    "destinations = [f\"{p['name']}: {p['description']}\" for p in prompt_infos]\n",
+    "destinations_str = \"\\n\".join(destinations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5bf05e4-d8c0-43c9-a311-729dea07661e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "default_prompt = ChatPromptTemplate.from_template(\"{input}\")\n",
+    "default_chain = LLMChain(llm=llm, prompt=default_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18c7016a-0336-4b99-b6b0-060c8a48b28e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MULTI_PROMPT_ROUTER_TEMPLATE = \"\"\"Given a raw text input to a \\\n",
+    "language model select the model prompt best suited for the input. \\\n",
+    "You will be given the names of the available prompts and a \\\n",
+    "description of what the prompt is best suited for. \\\n",
+    "You may also revise the original input if you think that revising\\\n",
+    "it will ultimately lead to a better response from the language model.\n",
+    "\n",
+    "<< FORMATTING >>\n",
+    "Return a markdown code snippet with a JSON object formatted to look like:\n",
+    "```json\n",
+    "{{{{\n",
+    "    \"destination\": string \\ name of the prompt to use or \"DEFAULT\"\n",
+    "    \"next_inputs\": string \\ a potentially modified version of the original input\n",
+    "}}}}\n",
+    "```\n",
+    "\n",
+    "REMEMBER: \"destination\" MUST be one of the candidate prompt \\\n",
+    "names specified below OR it can be \"DEFAULT\" if the input is not\\\n",
+    "well suited for any of the candidate prompts.\n",
+    "REMEMBER: \"next_inputs\" can just be the original input \\\n",
+    "if you don't think any modifications are needed.\n",
+    "\n",
+    "<< CANDIDATE PROMPTS >>\n",
+    "{destinations}\n",
+    "\n",
+    "<< INPUT >>\n",
+    "{{input}}\n",
+    "\n",
+    "<< OUTPUT (remember to include the ```json)>>\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc63b8a2-7b65-491f-83ff-900013070153",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "router_template = MULTI_PROMPT_ROUTER_TEMPLATE.format(\n",
+    "    destinations=destinations_str\n",
+    ")\n",
+    "router_prompt = PromptTemplate(\n",
+    "    template=router_template,\n",
+    "    input_variables=[\"input\"],\n",
+    "    output_parser=RouterOutputParser(),\n",
+    ")\n",
+    "\n",
+    "router_chain = LLMRouterChain.from_llm(llm, router_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba64ca24-aaf0-4018-ba1f-f3f798105223",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain = MultiPromptChain(router_chain=router_chain, \n",
+    "                         destination_chains=destination_chains, \n",
+    "                         default_chain=default_chain, verbose=True\n",
+    "                        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2ea473e-76e4-4b12-8c00-60a6bbd4e6fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain.run(\"What is black body radiation?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "272af205-7c84-4eb2-addc-c9e316aa941b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain.run(\"what is 2 + 2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec6227ed-bcff-461c-8381-11eb847f74f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain.run(\"Why does every cell in our body contain DNA?\")"
+   ]
   },
   {
    "cell_type": "markdown",
