--- a/cursos/espanol/deeplearning/LangChain_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_Prompting.ipynb
@@ -197,6 +197,203 @@
   },
   {
    "cell_type": "markdown",
+   "id": "14f4b977-5fb1-4eb8-be2e-5aa9f6b7fd57",
+   "metadata": {},
+   "source": [
+    "## Memoria\n",
+    "\n",
+    "Los modelos generalmente estan hechos de forma que no recuerdan lo que les has dicho anteriormente. Para solucionar esto podemos ir guardando todo lo que vamos \"conversando\" con el modelo y pasarselo como entrada junto con la nueva pregunta o interaccion que queremos tener con el modelo. Veamos como LangChain nos permite hacer esto de forma sencilla:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13a90afd-8109-4b20-8aa3-a29255180ad4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.chains import ConversationChain\n",
+    "from langchain.memory import ConversationBufferMemory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9ef883f-3f97-4f58-bb44-08d4b3a10f8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = ChatOpenAI(openai_api_key=token, temperature=0.0, model=\"gpt-3.5-turbo\")\n",
+    "\n",
+    "memory = ConversationBufferMemory()\n",
+    "conversation = ConversationChain(\n",
+    "    llm=llm, \n",
+    "    memory = memory,\n",
+    "    verbose=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1ada612-0955-460f-baa5-d40b3c5f90e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conversation.predict(input=\"Hi, my name is Andrew\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ba679e9-fce4-477b-a789-446f7a598c11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conversation.predict(input=\"What is 1+1?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36266df1-f138-41f8-98ab-b3f04a49b1ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conversation.predict(input=\"What is my name?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bf0624d-bcae-4178-bc57-12a50bdcb772",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(memory.buffer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31de0f05-f83e-446d-a067-b9113fabb21c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "memory.load_memory_variables({})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a52a2b03-0ddc-4782-80c3-665cb9a06dbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "memory = ConversationBufferMemory()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b406cfc4-a575-4c50-a975-3128d1251d45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "memory.save_context({\"input\": \"Hi\"}, \n",
+    "                    {\"output\": \"What's up\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b80b61c1-c6e8-4a89-b7dc-63f1c3007daa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(memory.buffer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31a4116e-cce7-40f7-9607-7dae523d66b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "memory.load_memory_variables({})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e804fa6-9dcc-4bb6-b3a2-3eb219983c2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "memory.save_context({\"input\": \"Not much, just hanging\"}, \n",
+    "                    {\"output\": \"Cool\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29f67397-f19a-4bc7-9497-aaa1845730c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "memory.load_memory_variables({})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07468dad-3b27-447a-9acd-19b7da2d686c",
+   "metadata": {},
+   "source": [
+    "## Limitar la memoria\n",
+    "\n",
+    "Si la conversacion es muy larga la memoria puede crecer demasiado, para limitar la cantidad de memoria que queremos que el modelo tenga LangChain nos ofrece diferentes formas de hacerlo:\n",
+    "- WindowMemory: guarda las k ultimas preguntas junto con sus respectivas respuestas\n",
+    "- TokenBufferMemory: guarda los ultimos max_token_limit tokens\n",
+    "- ConversationSummaryBufferMemory: guarda un resumen de max_token_limit tokens de lo conversado anteriormente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aba65098-df7e-4424-be7c-e3a08ac4efa3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.memory import ConversationBufferWindowMemory\n",
+    "memory = ConversationBufferWindowMemory(k=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1344c9fc-5018-4924-ba37-8547a832c728",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.memory import ConversationTokenBufferMemory\n",
+    "memory = ConversationTokenBufferMemory(llm=llm, max_token_limit=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6301992a-f706-49ac-963c-d1c9d9ba55e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.memory import ConversationSummaryBufferMemory\n",
+    "memory = ConversationSummaryBufferMemory(llm=llm, max_token_limit=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "150049ac-d851-49b9-8727-051927f0c8d1",
    "metadata": {},
    "source": [
