--- a/cursos/espanol/deeplearning/RAG.ipynb
+++ b/cursos/espanol/deeplearning/RAG.ipynb
@@ -22,7 +22,9 @@
    "metadata": {},
    "source": [
     "## Referencias:\n",
-    "Esta unidad es un resumen traducido con algunas modificaciones del [curso de Andrew Ng de Deeplearning.ai](https://www.deeplearning.ai/short-courses/langchain-chat-with-your-data/)"
+    "Esta unidad es un resumen traducido con algunas modificaciones del [curso de Andrew Ng de Deeplearning.ai](https://www.deeplearning.ai/short-courses/langchain-chat-with-your-data/)\n",
+    "\n",
+    "Meta, articulo original sobre RAG: https://ai.meta.com/blog/retrieval-augmented-generation-streamlining-the-creation-of-intelligent-natural-language-processing-models/"
    ]
   },
   {
