--- a/cursos/espanol/programacion/A5_clases.ipynb
+++ b/cursos/espanol/programacion/A5_clases.ipynb
@@ -435,6 +435,164 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9bdbee4b-8c6f-431d-ab66-99fdd7543c91",
+   "metadata": {},
+   "source": [
+    "# Pydantic\n",
+    "\n",
+    "[Pydantic](https://docs.pydantic.dev/latest/) es una libreria que nos permite crear clases con validacion de datos. Es decir crear clases donde sus atributos cumplan con ciertas condiciones como ser numeros o strings o tener un formato especifico y ademas permite transformar estas clases facilmente al formato JSON."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2197e239-8554-450a-8646-c3cffa0aa8b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "from pydantic import BaseModel, PositiveInt\n",
+    "from typing import Optional\n",
+    "\n",
+    "\n",
+    "class User(BaseModel):\n",
+    "    id: int  \n",
+    "    name: str = 'John Doe' \n",
+    "    signup_ts: Optional[datetime] = None\n",
+    "    #signup_ts: datetime | None  # python >3.10 sintax\n",
+    "    tastes: dict[str, PositiveInt]  \n",
+    "    \n",
+    "external_data = {\n",
+    "    'id': 123,\n",
+    "    'signup_ts': '2019-06-01 12:22',  \n",
+    "    'tastes': {\n",
+    "        'wine': 9,\n",
+    "        b'cheese': 7,  \n",
+    "        'cabbage': '1',  \n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "user = User(**external_data) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "36f53002-6ee0-4352-a382-277275c8d38d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(user.id)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "29031d60-603b-45fd-ad7c-8932f54e35ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': 123, 'name': 'John Doe', 'signup_ts': datetime.datetime(2019, 6, 1, 12, 22), 'tastes': {'wine': 9, 'cheese': 7, 'cabbage': 1}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(user.dict())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "df0fec7f-493e-49ef-ae4c-336d5fcffa6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"id\": 123, \"name\": \"John Doe\", \"signup_ts\": \"2019-06-01T12:22:00\", \"tastes\": {\"wine\": 9, \"cheese\": 7, \"cabbage\": 1}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(user.json())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "658578a9-2b1d-4cbc-ad01-2de41d83b99a",
+   "metadata": {},
+   "source": [
+    "Las variables de clase no son muy usadas pero si queremos tener una con pydantic debemos hacer lo siguiente:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a5e0c18e-b0d5-48f6-a644-6dcee3d964b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import ClassVar\n",
+    "\n",
+    "class Example(BaseModel):\n",
+    "    x: ClassVar[int] = 3\n",
+    "    y: int\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "04ea64e6-0dfc-4906-8d16-ff46173384dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Example.x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "90ead929-ddeb-4a3e-aa4f-8b267127b1c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj = Example(**{'y':5})\n",
+    "print(obj.y)\n",
+    "print(obj.x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8da4ae7f-4e07-4cb4-982c-a9a01337a9ef",
    "metadata": {},
    "source": [
