--- a/cursos/espanol/datascience/7.1_ejercicio_diabetes_parte2.ipynb
+++ b/cursos/espanol/datascience/7.1_ejercicio_diabetes_parte2.ipynb
@@ -39,8 +39,8 @@
    },
    "outputs": [],
    "source": [
-    "df_train = pd.read_csv('data/diabetes/diabetes_train_procesado.csv')\n",
-    "df_test = pd.read_csv('data/diabetes/diabetes_test_procesado.csv')"
+    "df_train = pd.read_csv('https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/data/diabetes/diabetes_train_procesado.csv')\n",
+    "df_test = pd.read_csv('https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/data/diabetes/diabetes_test_procesado.csv')"
    ]
   },
   {
